--- a/style.css
+++ b/style.css
@@ -689,25 +689,25 @@ html {
 --------------------------------*/
 @media screen and (min-width: 980px) {
   .l-col-push-1 {
-    margin-left: 8.33333%; }
+    margin-left: 8.63156%; }
   .l-col-push-2 {
-    margin-left: 16.66667%; }
+    margin-left: 17.26311%; }
   .l-col-push-3 {
-    margin-left: 25%; }
+    margin-left: 25.89467%; }
   .l-col-push-4 {
-    margin-left: 33.33333%; }
+    margin-left: 34.52623%; }
   .l-col-push-5 {
-    margin-left: 41.66667%; }
+    margin-left: 43.15779%; }
   .l-col-push-6 {
-    margin-left: 50%; }
+    margin-left: 51.78934%; }
   .l-col-push-7 {
-    margin-left: 58.33333%; }
+    margin-left: 60.4209%; }
   .l-col-push-8 {
-    margin-left: 66.66667%; }
+    margin-left: 69.05246%; }
   .l-col-push-9 {
-    margin-left: 75%; }
+    margin-left: 77.68402%; }
   .l-col-push-10 {
-    margin-left: 83.33333%; } }
+    margin-left: 86.31557%; } }
 
 /*-------------------------------
     Padding up & down
